NetGL/Assets/gen/shader_langParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/julia/RiderProjects/NetGL/NetGL/Assets/shader_lang.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class shader_langParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SHADER=1, VERTEX=2, UNIFORM=3, VOID=4, USING=5, OUT=6, IN=7, LCURLY=8, 
		RCURLY=9, LPAREN=10, RPAREN=11, SEMI=12, COMMA=13, DOT=14, EQUALS=15, 
		VEC2=16, VEC3=17, VEC4=18, MAT4=19, SAMPLER2D=20, VERTEX_STAGE=21, IDENTIFIER=22, 
		STRING=23, WS=24, LINE_COMMENT=25, BLOCK_COMMENT=26;
	public const int
		RULE_shader = 0, RULE_shaderDecl = 1, RULE_usingDecls = 2, RULE_usingDecl = 3, 
		RULE_vertexBlock = 4, RULE_vertexDecls = 5, RULE_vertexDecl = 6, RULE_type = 7, 
		RULE_uniformBlock = 8, RULE_uniformDecls = 9, RULE_uniformDecl = 10, RULE_vertexStage = 11, 
		RULE_vertexStageParams = 12, RULE_vertexStageParam = 13, RULE_vertexBody = 14, 
		RULE_statement = 15, RULE_assignment = 16;
	public static readonly string[] ruleNames = {
		"shader", "shaderDecl", "usingDecls", "usingDecl", "vertexBlock", "vertexDecls", 
		"vertexDecl", "type", "uniformBlock", "uniformDecls", "uniformDecl", "vertexStage", 
		"vertexStageParams", "vertexStageParam", "vertexBody", "statement", "assignment"
	};

	private static readonly string[] _LiteralNames = {
		null, "'shader'", "'vertex'", "'uniform'", "'void'", "'using'", "'out'", 
		"'in'", "'{'", "'}'", "'('", "')'", "';'", "','", "'.'", "'='", "'vec2'", 
		"'vec3'", "'vec4'", "'mat4'", "'sampler2D'", "'vertex_stage'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SHADER", "VERTEX", "UNIFORM", "VOID", "USING", "OUT", "IN", "LCURLY", 
		"RCURLY", "LPAREN", "RPAREN", "SEMI", "COMMA", "DOT", "EQUALS", "VEC2", 
		"VEC3", "VEC4", "MAT4", "SAMPLER2D", "VERTEX_STAGE", "IDENTIFIER", "STRING", 
		"WS", "LINE_COMMENT", "BLOCK_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "shader_lang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static shader_langParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public shader_langParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public shader_langParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ShaderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ShaderDeclContext shaderDecl() {
			return GetRuleContext<ShaderDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingDeclsContext usingDecls() {
			return GetRuleContext<UsingDeclsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VertexBlockContext vertexBlock() {
			return GetRuleContext<VertexBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UniformBlockContext uniformBlock() {
			return GetRuleContext<UniformBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VertexStageContext vertexStage() {
			return GetRuleContext<VertexStageContext>(0);
		}
		public ShaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shader; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterShader(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitShader(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderContext shader() {
		ShaderContext _localctx = new ShaderContext(Context, State);
		EnterRule(_localctx, 0, RULE_shader);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			shaderDecl();
			State = 35;
			usingDecls();
			State = 36;
			vertexBlock();
			State = 37;
			uniformBlock();
			State = 38;
			vertexStage();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHADER() { return GetToken(shader_langParser.SHADER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(shader_langParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(shader_langParser.SEMI, 0); }
		public ShaderDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterShaderDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitShaderDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderDeclContext shaderDecl() {
		ShaderDeclContext _localctx = new ShaderDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_shaderDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			Match(SHADER);
			State = 41;
			Match(STRING);
			State = 42;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingDeclsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UsingDeclContext[] usingDecl() {
			return GetRuleContexts<UsingDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingDeclContext usingDecl(int i) {
			return GetRuleContext<UsingDeclContext>(i);
		}
		public UsingDeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingDecls; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterUsingDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitUsingDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingDecls(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsingDeclsContext usingDecls() {
		UsingDeclsContext _localctx = new UsingDeclsContext(Context, State);
		EnterRule(_localctx, 4, RULE_usingDecls);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==USING) {
				{
				{
				State = 44;
				usingDecl();
				}
				}
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USING() { return GetToken(shader_langParser.USING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(shader_langParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(shader_langParser.SEMI, 0); }
		public UsingDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterUsingDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitUsingDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsingDeclContext usingDecl() {
		UsingDeclContext _localctx = new UsingDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_usingDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			Match(USING);
			State = 51;
			Match(STRING);
			State = 52;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VertexBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VERTEX() { return GetToken(shader_langParser.VERTEX, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(shader_langParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VertexDeclsContext vertexDecls() {
			return GetRuleContext<VertexDeclsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(shader_langParser.RCURLY, 0); }
		public VertexBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vertexBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterVertexBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitVertexBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVertexBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VertexBlockContext vertexBlock() {
		VertexBlockContext _localctx = new VertexBlockContext(Context, State);
		EnterRule(_localctx, 8, RULE_vertexBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(VERTEX);
			State = 55;
			Match(LCURLY);
			State = 56;
			vertexDecls();
			State = 57;
			Match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VertexDeclsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VertexDeclContext[] vertexDecl() {
			return GetRuleContexts<VertexDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VertexDeclContext vertexDecl(int i) {
			return GetRuleContext<VertexDeclContext>(i);
		}
		public VertexDeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vertexDecls; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterVertexDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitVertexDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVertexDecls(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VertexDeclsContext vertexDecls() {
		VertexDeclsContext _localctx = new VertexDeclsContext(Context, State);
		EnterRule(_localctx, 10, RULE_vertexDecls);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2031616L) != 0)) {
				{
				{
				State = 59;
				vertexDecl();
				}
				}
				State = 64;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VertexDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(shader_langParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(shader_langParser.SEMI, 0); }
		public VertexDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vertexDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterVertexDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitVertexDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVertexDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VertexDeclContext vertexDecl() {
		VertexDeclContext _localctx = new VertexDeclContext(Context, State);
		EnterRule(_localctx, 12, RULE_vertexDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			type();
			State = 66;
			Match(IDENTIFIER);
			State = 67;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VEC2() { return GetToken(shader_langParser.VEC2, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VEC3() { return GetToken(shader_langParser.VEC3, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VEC4() { return GetToken(shader_langParser.VEC4, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MAT4() { return GetToken(shader_langParser.MAT4, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SAMPLER2D() { return GetToken(shader_langParser.SAMPLER2D, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 14, RULE_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 2031616L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UniformBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UNIFORM() { return GetToken(shader_langParser.UNIFORM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(shader_langParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UniformDeclsContext uniformDecls() {
			return GetRuleContext<UniformDeclsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(shader_langParser.RCURLY, 0); }
		public UniformBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_uniformBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterUniformBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitUniformBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUniformBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UniformBlockContext uniformBlock() {
		UniformBlockContext _localctx = new UniformBlockContext(Context, State);
		EnterRule(_localctx, 16, RULE_uniformBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(UNIFORM);
			State = 72;
			Match(LCURLY);
			State = 73;
			uniformDecls();
			State = 74;
			Match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UniformDeclsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UniformDeclContext[] uniformDecl() {
			return GetRuleContexts<UniformDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UniformDeclContext uniformDecl(int i) {
			return GetRuleContext<UniformDeclContext>(i);
		}
		public UniformDeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_uniformDecls; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterUniformDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitUniformDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUniformDecls(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UniformDeclsContext uniformDecls() {
		UniformDeclsContext _localctx = new UniformDeclsContext(Context, State);
		EnterRule(_localctx, 18, RULE_uniformDecls);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2031616L) != 0)) {
				{
				{
				State = 76;
				uniformDecl();
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UniformDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(shader_langParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(shader_langParser.SEMI, 0); }
		public UniformDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_uniformDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterUniformDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitUniformDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUniformDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UniformDeclContext uniformDecl() {
		UniformDeclContext _localctx = new UniformDeclContext(Context, State);
		EnterRule(_localctx, 20, RULE_uniformDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			type();
			State = 83;
			Match(IDENTIFIER);
			State = 84;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VertexStageContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VOID() { return GetToken(shader_langParser.VOID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VERTEX_STAGE() { return GetToken(shader_langParser.VERTEX_STAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(shader_langParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VertexStageParamsContext vertexStageParams() {
			return GetRuleContext<VertexStageParamsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(shader_langParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(shader_langParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VertexBodyContext vertexBody() {
			return GetRuleContext<VertexBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(shader_langParser.RCURLY, 0); }
		public VertexStageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vertexStage; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.EnterVertexStage(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Ishader_langListener typedListener = listener as Ishader_langListener;
			if (typedListener != null) typedListener.ExitVertexStage(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ishader_langVisitor<TResult> typedVisitor = visitor as Ishader_langVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVertexStage(this);
			else return visitor.VisitChildren(this);
		}
	}
